<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        tools:context=".Placilo">

    <Button
            android:text="nazaj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button4"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/cvvKreditnaKartica"
            android:textSize="16sp"
            android:onClick="nazajCB" android:fontFamily="@font/open_sans_semibold"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginEnd="102dp"
            android:backgroundTint="@android:color/system_accent1_500" tools:targetApi="s"/>
    <EditText
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/cvvKreditnaKartica"
            android:layout_marginEnd="28dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" android:layout_marginStart="54dp"
            app:layout_constraintStart_toEndOf="@+id/textView19" android:minHeight="48dp" android:hint="@string/cvv"
            android:textSize="14sp" android:importantForAutofill="no" android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="CVV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView19"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/textView18"
            android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="Številka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView17"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginTop="43dp" app:layout_constraintTop_toBottomOf="@+id/textView16"
            android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="Datum\nizteka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginTop="34dp" app:layout_constraintTop_toBottomOf="@+id/textView17"
            android:fontFamily="@font/open_sans"/>
    <EditText
            android:layout_width="260dp"
            android:layout_height="49dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/priimekKreditnaKartica"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imeKreditnaKartica"
            android:autofillHints="" android:layout_marginStart="31dp"
            app:layout_constraintStart_toEndOf="@+id/textView16" android:textSize="14sp"
            android:hint="@string/priimek" android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="Priimek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView16"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="Ime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="84dp"
            android:textSize="16sp" android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="Vnesite podatke o kreditni kartici"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484" android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:fontFamily="@font/open_sans_semibold"/>
    <EditText
            android:layout_width="260dp"
            android:layout_height="49dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/imeKreditnaKartica"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginStart="50dp"
            app:layout_constraintStart_toEndOf="@+id/textView14" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp" android:autofillHints=""
            android:hint="@string/ime" android:fontFamily="@font/open_sans"/>
    <EditText
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editTextDate" android:layout_marginStart="38dp"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/stevilkaKreditnaKartica" android:minHeight="48dp"
            android:hint="@string/datumIztekaKartica" android:textSize="14sp" android:importantForAutofill="no"
            android:fontFamily="@font/open_sans"/>
    <EditText
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/stevilkaKreditnaKartica"
            android:layout_marginStart="30dp" app:layout_constraintStart_toEndOf="@+id/textView17"
            android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/priimekKreditnaKartica"
            android:layout_marginEnd="28dp" app:layout_constraintEnd_toEndOf="parent" android:minHeight="48dp"
            android:hint="@string/stevilkaKartica" android:textSize="14sp" android:importantForAutofill="no"
            android:fontFamily="@font/open_sans"/>
    <Button
            android:text="Potrdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/cvvKreditnaKartica"
            android:textSize="16sp"
            android:onClick="potrdiPlacilo" android:fontFamily="@font/open_sans_semibold"
            android:layout_marginEnd="60dp" app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@android:color/system_accent1_500" tools:targetApi="s"/>
</androidx.constraintlayout.widget.ConstraintLayout>