<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        tools:context=".Rezervacija">

  <Button
          android:text="izpolni podatke o ostalih potnikih"
          android:layout_width="350dp"
          android:layout_height="48dp" android:id="@+id/izpolniPodatke"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="92dp" android:layout_marginEnd="90dp" app:layout_constraintEnd_toEndOf="parent"
          android:backgroundTint="@android:color/system_accent1_500" android:onClick="izpolniPodatkeCB"
          tools:targetApi="s"
          android:fontFamily="@font/open_sans_semibold" android:layout_marginTop="20dp"
          app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
          app:layout_constraintHorizontal_bias="0.505"/>
  <TextView
          android:text="Cena"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView15"
          android:textSize="16sp"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="20dp"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="@font/open_sans"
          android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/textView13"/>
  <TextView
          android:text="Razred"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView13"
          android:textSize="16sp"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="20dp"
          android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="@font/open_sans"/>
  <EditText
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:inputType="number"
          android:ems="10"
          android:id="@+id/steviloOtrok"
          app:layout_constraintStart_toEndOf="@+id/textView11"
          android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent" android:hint="@string/steviloOtrok"
          android:importantForAutofill="no"
          android:layout_marginTop="7dp" app:layout_constraintTop_toBottomOf="@+id/steviloOdraslih"
          android:textSize="16sp" android:fontFamily="@font/open_sans" android:layout_marginStart="55dp"/>
  <EditText
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:inputType="number"
          android:ems="10"
          android:id="@+id/steviloDojenckov"
          app:layout_constraintStart_toEndOf="@+id/textView12"
          android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent" android:hint="@string/steviloDojenckov"
          android:importantForAutofill="no"
          android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/steviloOdraslih"
          android:textSize="16sp" android:fontFamily="@font/open_sans" android:layout_marginStart="33dp"/>
  <TextView
          android:text="Število \nodraslih"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView10"
          android:textSize="15sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
          android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="@font/open_sans"/>
  <TextView
          android:text="Število \notrok"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView11"
          android:textSize="15sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
          android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="@font/open_sans"/>
  <TextView
          android:text="Število \ndojenčkov"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView12"
          android:textSize="15sp"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="20dp" android:layout_marginTop="12dp"
          app:layout_constraintTop_toBottomOf="@+id/textView11"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="@font/open_sans"/>
  <EditText
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:inputType="date"
          android:ems="10"
          android:id="@+id/datumPrihoda"
          android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/textView9" android:hint="@string/datumPrihoda"
          android:autofillHints="" android:layout_marginTop="4dp"
          app:layout_constraintTop_toBottomOf="@+id/datumOdhoda" android:textSize="16sp"
          android:fontFamily="@font/open_sans" android:layout_marginStart="50dp"/>
  <TextView
          android:text="Datum \nprihoda"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView9"
          android:textSize="15sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
          android:layout_marginTop="14dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="@font/open_sans"/>
  <TextView
          android:text="Destinacija"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView"
          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="84dp"
          android:textSize="16sp" android:fontFamily="@font/open_sans"/>
  <Spinner
          android:layout_width="0dp"
          android:layout_height="48dp" android:id="@+id/destinacija"
          android:layout_marginStart="25dp" app:layout_constraintStart_toEndOf="@+id/textView"
          android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"
          android:entries="@array/destinacija" android:layout_marginTop="24dp"
          app:layout_constraintTop_toBottomOf="@+id/textView2"/>
  <TextView
          android:text="Vnesite podatke o potovanju"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView2"
          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
          app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="20dp"
          android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.484" android:textSize="20sp"
          android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:fontFamily="@font/open_sans_semibold"/>
  <TextView
          android:text="Tip karte"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView5"
          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
          android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView" android:textSize="16sp"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="@font/open_sans"/>
  <RadioButton
          android:text="Enosmerna"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/enosmerna"
          android:layout_marginStart="50dp" app:layout_constraintStart_toEndOf="@+id/textView5"
          android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/destinacija"
          android:textSize="14sp"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:checked="false"
          android:clickable="true" android:fontFamily="@font/open_sans" android:focusable="true"
          app:layout_constraintEnd_toStartOf="@+id/dvosmerna"
          android:layout_marginEnd="5dp"/>
  <RadioButton
          android:text="Dvosmerna"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/dvosmerna"
          android:textSize="14sp" android:layout_marginTop="4dp"
          app:layout_constraintTop_toBottomOf="@+id/destinacija"
          app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/open_sans"
          android:layout_marginEnd="40dp"/>
  <TextView
          android:text="Datum \nodhoda"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/textView6"
          android:textSize="15sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
          android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="@font/open_sans"/>
  <EditText
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:inputType="date"
          android:ems="10"
          android:id="@+id/datumOdhoda"
          android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginTop="8dp"
          app:layout_constraintTop_toBottomOf="@+id/dvosmerna" android:layout_marginStart="50dp"
          app:layout_constraintStart_toEndOf="@+id/textView6" android:hint="@string/datumOdhoda"
          android:autofillHints="" android:textSize="16sp"
          android:fontFamily="@font/open_sans"/>
  <EditText
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:inputType="number"
          android:ems="10"
          android:id="@+id/steviloOdraslih" android:layout_marginStart="47dp"
          app:layout_constraintStart_toEndOf="@+id/textView10" android:layout_marginTop="4dp"
          app:layout_constraintTop_toBottomOf="@+id/datumPrihoda" android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent" android:hint="@string/steviloOdraslih"
          android:importantForAutofill="no" android:textSize="16sp"
          android:fontFamily="@font/open_sans"/>
  <RadioButton
          android:text="Prvi"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/razredPrvi"
          android:textSize="14sp"
          android:fontFamily="@font/open_sans"
          android:layout_marginTop="8dp"
          app:layout_constraintTop_toBottomOf="@+id/steviloDojenckov"
          app:layout_constraintEnd_toStartOf="@+id/razredPoslovni" android:layout_marginEnd="4dp"/>
  <RadioButton
          android:text="Poslovni"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/razredPoslovni"
          android:textSize="14sp" android:layout_marginTop="8dp"
          app:layout_constraintTop_toBottomOf="@+id/steviloDojenckov"
          app:layout_constraintEnd_toStartOf="@+id/razredEkonomski" android:layout_marginEnd="4dp"
          android:fontFamily="@font/open_sans" android:layout_marginBottom="3dp"
          app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"/>
  <RadioButton
          android:text="Ekonomski"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/razredEkonomski"
          android:textSize="14sp" android:layout_marginTop="8dp"
          app:layout_constraintTop_toBottomOf="@+id/steviloDojenckov" android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/open_sans"
          android:layout_marginBottom="3dp" app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"/>
  <EditText
          android:layout_width="0dp"
          android:layout_height="49dp"
          android:inputType="numberDecimal"
          android:ems="10"
          android:id="@+id/editTextNumberDecimal"
          android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="70dp"
          app:layout_constraintStart_toEndOf="@+id/textView15"
          android:hint="@string/cena" android:textSize="16sp" android:clickable="false"
          android:importantForAutofill="no"
          android:editable="false" android:fontFamily="@font/open_sans" android:layout_marginTop="3dp"
          app:layout_constraintTop_toBottomOf="@+id/razredPrvi"/>
  <Button
          android:text="nadaljuj na placilo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/nadaljujNaPlacilo"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="92dp" android:layout_marginEnd="90dp" app:layout_constraintEnd_toEndOf="parent"
          android:backgroundTint="@android:color/system_accent1_500" android:onClick="placiloCB" tools:targetApi="s"
          android:fontFamily="@font/open_sans_semibold"
          app:layout_constraintTop_toBottomOf="@+id/izpolniPodatke"/>
</androidx.constraintlayout.widget.ConstraintLayout>