<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        tools:context=".Potnik">

    <TextView
            android:text="Spol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView29"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView28"
            android:fontFamily="@font/open_sans"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView30"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView29"
            android:text="Datum\nrojstva" android:fontFamily="@font/open_sans"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/imePotnik"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp" android:autofillHints=""
            android:hint="@string/ime" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView26" android:layout_marginStart="66dp"
            app:layout_constraintStart_toEndOf="@+id/textView27" android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="Priimek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView28"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/textView27"
            android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="Ime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView27"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="84dp"
            android:textSize="16sp" android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="Vnesite podatke o potnikih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView26"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484" android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:fontFamily="@font/open_sans_semibold"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/priimekPotnik"
            android:textSize="14sp" android:autofillHints=""
            android:hint="@string/priimek" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imePotnik" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="39dp"
            app:layout_constraintStart_toEndOf="@+id/textView28" android:fontFamily="@font/open_sans"/>
    <RadioButton
            android:text="Moški"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/spolMoski"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/priimekPotnik"
            app:layout_constraintEnd_toStartOf="@+id/spolZenski" android:layout_marginEnd="40dp"
            android:layout_marginStart="61dp" app:layout_constraintStart_toEndOf="@+id/textView29"
            app:layout_constraintHorizontal_bias="0.714" android:fontFamily="@font/open_sans"/>
    <RadioButton
            android:text="Ženski"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/spolZenski"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/priimekPotnik" android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/open_sans"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/datumRojstva"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/datumIztekaKartica"
            android:textSize="14sp" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/spolMoski" android:layout_marginStart="42dp"
            app:layout_constraintStart_toEndOf="@+id/textView30" android:minHeight="48dp"
            android:importantForAutofill="no" android:fontFamily="@font/open_sans"/>
    <Button
            android:text="naprej"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/naslednji"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/datumRojstva"
            android:onClick="naprejCB" android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/open_sans_semibold" android:textSize="16sp"
            android:backgroundTint="@android:color/system_accent1_500" tools:targetApi="s"/>
    <Button
            android:text="nazaj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            app:layout_constraintTop_toBottomOf="@+id/datumRojstva"
            app:layout_constraintEnd_toStartOf="@+id/naslednji" android:layout_marginEnd="78dp"
            android:onClick="nazajCB" android:fontFamily="@font/open_sans_semibold" android:layout_marginTop="44dp"
            app:layout_constraintHorizontal_bias="0.486" android:textSize="16sp"
            android:backgroundTint="@android:color/system_accent1_500" tools:targetApi="s"/>
</androidx.constraintlayout.widget.ConstraintLayout>